dig-src/main/default/objects/Motion__c/Motion__c.object-meta.xml
<CustomObject>
    <label>Motion</label>
    <pluralLabel>Motions</pluralLabel>
    <nameField>
        <label>Motion Name</label>
        <type>Text</type>
        <length>80</length>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>