dig-src/main/default/objects/Motion__c/fields/Eligible_Voter_Count__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Voter_Count__c</fullName>
    <label>Eligible Voter Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>