dig-src/main/default/objects/Motion__c/fields/Motion_Type__c.field-meta.xml
<CustomField>
    <fullName>Motion_Type__c</fullName>
    <label>Motion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board</fullName>
                <default>true</default>
                <label>Board</label>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>