dig-src/main/default/objects/Motion__c/fields/No_Count__c.field-meta.xml
<CustomField>
    <fullName>No_Count__c</fullName>
    <label>No Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>