dig-src/main/default/objects/Motion__c/fields/Pass_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Pass_Threshold__c</fullName>
    <label>Pass Threshold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple Majority</fullName>
                <default>true</default>
                <label>Simple Majority</label>
            </value>
            <value>
                <fullName>Two-Thirds</fullName>
            </value>
            <value>
                <fullName>Custom Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>