dig-src/main/default/objects/Motion__c/fields/Quorum_Number__c.field-meta.xml
<CustomField>
    <fullName>Quorum_Number__c</fullName>
    <label>Quorum Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>