dig-src/main/default/objects/Motion__c/fields/Quorum_Type__c.field-meta.xml
<CustomField>
    <fullName>Quorum_Type__c</fullName>
    <label>Quorum Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board</fullName>
                <default>true</default>
                <label>Board</label>
            </value>
            <value>
                <fullName>Members</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>