dig-src/main/default/objects/Motion__c/fields/Sponsor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sponsor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sponsored Motions</relationshipLabel>
    <relationshipName>Sponsored_Motions</relationshipName>
    <type>Lookup</type>
</CustomField>