dig-src/main/default/objects/Motion__c/fields/Total_Votes__c.field-meta.xml
<CustomField>
    <fullName>Total_Votes__c</fullName>
    <label>Total Votes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>