dig-src/main/default/objects/Motion__c/fields/Yes_Count__c.field-meta.xml
<CustomField>
    <fullName>Yes_Count__c</fullName>
    <label>Yes Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>